# coverage-plan

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy.yml
apps/: CMakeLists.txt  bimac_learning_experiment.cpp  energy_functional_tuning.cpp  five_heavy_pomdp_example.cpp  icaps_checkpoint_generator.cpp  icaps_checkpoint_tester.cpp  icaps_learning_exp.cpp  icaps_planning_exp.cpp  imac_example.cpp  imac_executor_example.cpp  imac_test.cpp  lifelong_test_checkpoint_generation.cpp  multi_episode_test.cpp  num_scenarios_tuning.cpp  pomdp_coverage_example.cpp  prelim_experiments.cpp  profiling_test.cpp  random_coverage_robot_example.cpp  random_imac_gen.cpp  test_checkpoints_experiment.cpp
data/icaps_exps/eight_very_heavy/: entry.csv  run_1.csv  run_14.csv  run_15.csv  run_16.csv  run_17.csv  run_18.csv  run_2.csv  run_21.csv  run_23.csv  run_24.csv  run_25.csv  run_29.csv  run_30.csv  run_31.csv  run_32.csv  run_34.csv  run_36.csv  run_37.csv  run_38.csv  run_4.csv  run_40.csv  run_5.csv  run_6.csv  run_7.csv  run_8.csv
data/icaps_exps/learning_exp/: exit.csv
data/icaps_exps/nine_very_heavy/: run_1.csv  run_14.csv  run_15.csv  run_18.csv  run_19.csv  run_2.csv  run_20.csv  run_21.csv  run_22.csv  run_23.csv  run_25.csv  run_26.csv  run_27.csv  run_28.csv  run_29.csv  run_3.csv  run_36.csv  run_37.csv  run_5.csv  run_6.csv  run_7.csv  run_8.csv
data/icaps_exps/seven_very_heavy/: entry.csv  initial_belief.csv  run_12.csv  run_13.csv  run_15.csv  run_17.csv  run_18.csv  run_19.csv  run_2.csv  run_20.csv  run_22.csv  run_23.csv  run_25.csv  run_27.csv  run_28.csv  run_31.csv  run_33.csv  run_36.csv  run_4.csv  run_5.csv  run_6.csv
data/icaps_exps/six_very_heavy/: exit.csv  run_1.csv  run_11.csv  run_12.csv  run_13.csv  run_14.csv  run_15.csv  run_17.csv  run_18.csv  run_19.csv  run_20.csv  run_21.csv  run_23.csv  run_25.csv  run_28.csv  run_29.csv  run_3.csv  run_31.csv  run_32.csv  run_33.csv  run_34.csv  run_35.csv  run_36.csv  run_37.csv  run_39.csv  run_7.csv  run_8.csv  run_9.csv
data/icaps_exps/ten_very_heavy/: entry.csv  run_1.csv  run_11.csv  run_12.csv  run_13.csv  run_14.csv  run_17.csv  run_22.csv  run_32.csv  run_35.csv  run_37.csv  run_40.csv  run_5.csv  run_6.csv
data/plots/8_neighbours/: numerical_results.txt
data/plots/parameter_tests/: statistics.txt
data/plots/prelim_exps/: stat_sig_results.txt
data/prelim_exps/eight_very_heavy/: run_10.csv  run_11.csv  run_12.csv  run_13.csv  run_19.csv  run_20.csv  run_22.csv  run_26.csv  run_27.csv  run_28.csv  run_3.csv  run_33.csv  run_35.csv  run_39.csv  run_9.csv
data/prelim_exps/five_heavy/: entry.csv  exit.csv  initial_belief.csv  run_1.csv  run_10.csv  run_2.csv  run_3.csv  run_4.csv  run_5.csv  run_6.csv  run_7.csv  run_8.csv  run_9.csv
data/prelim_exps/five_light/: entry.csv  exit.csv  initial_belief.csv  run_1.csv  run_10.csv  run_2.csv  run_3.csv  run_4.csv  run_5.csv  run_6.csv  run_7.csv  run_8.csv  run_9.csv
data/prelim_exps/five_semi_static/: entry.csv  exit.csv  run_1.csv  run_10.csv  run_2.csv  run_3.csv  run_4.csv  run_5.csv  run_6.csv  run_7.csv  run_8.csv  run_9.csv
data/prelim_exps/five_very_heavy/: exit.csv  run_1.csv  run_10.csv  run_11.csv  run_12.csv  run_13.csv  run_14.csv  run_15.csv  run_16.csv  run_17.csv  run_18.csv  run_19.csv  run_2.csv  run_20.csv  run_21.csv  run_22.csv  run_23.csv  run_24.csv  run_25.csv  run_26.csv  run_27.csv  run_28.csv  run_29.csv  run_3.csv  run_30.csv  run_31.csv  run_32.csv  run_33.csv  run_34.csv  run_35.csv  run_36.csv  run_37.csv  run_38.csv  run_39.csv  run_4.csv  run_40.csv  run_5.csv  run_6.csv  run_7.csv  run_8.csv  (+1 more)
data/prelim_exps/four_heavy/: entry.csv  exit.csv  initial_belief.csv  run_1.csv  run_10.csv  run_2.csv  run_3.csv  run_4.csv  run_5.csv  run_6.csv  run_7.csv  run_8.csv  run_9.csv
data/prelim_exps/four_light/: entry.csv  exit.csv  initial_belief.csv  run_1.csv  run_10.csv  run_2.csv  run_3.csv  run_4.csv  run_5.csv  (+4 more)
data/results/: BIMacLearningExperimentResults.csv  pomdpCoverageRobotExampleMap.csv  pomdpCoverageRobotExampleVisited.csv  randomCoverageRobotExampleCovered.csv  randomCoverageRobotExampleMap.csv
data/tests/: boustrophedonIMacRun.csv  energyFunctionalIMacRun.csv
docs/: Makefile  requirements.txt
docs/source/: Doxyfile.in  conf.py  index.rst  installation.rst  tutorials.rst
include/mod/: imac.h
scripts/animate/: animate_coverage_run.py
scripts/plotting/: plot_bimac_learning_results.py  plot_checkpoint_test_results.py  plot_energy_functional_tuning_results.py  plot_icaps_framework_results.py  plot_icaps_learning_results.py  plot_icaps_planning_results.py  plot_multi_episode_test_results.py  plot_num_scenarios_tuning_results.py  plot_parameter_tuning_results.py  plot_prelim_results.py
scripts/tests/: complexity_analysis.py  gen_fake_imac_run.py
src/: CMakeLists.txt
src/baselines/: boustrophedon_coverage_robot.cpp  energy_functional_coverage_robot.cpp  greedy_coverage_robot.cpp  random_coverage_robot.cpp
src/mod/: bimac.cpp  fixed_imac_executor.cpp  grid_cell.cpp  imac.cpp  imac_belief_sampler.cpp  imac_executor.cpp
src/planning/: action.cpp  coverage_belief.cpp  coverage_bounds.cpp  coverage_observation.cpp  coverage_planner.cpp  coverage_pomdp.cpp  coverage_robot.cpp  coverage_state.cpp  coverage_world.cpp  pomdp_coverage_robot.cpp  random_coverage_robot.cpp
src/util/: seed.cpp
tests/: CMakeLists.txt
tests/baselines/: boustrophedon_coverage_robot_tests.cpp  energy_functional_coverage_robot_tests.cpp  greedy_coverage_robot_tests.cpp  random_coverage_robot_tests.cpp
tests/mod/: bimac_tests.cpp  fixed_imac_executor_tests.cpp  grid_cell_tests.cpp  imacTest.cpp  imac_belief_sampler_tests.cpp  imac_executor_tests.cpp  imac_tests.cpp
tests/planning/: action_tests.cpp  coverage_belief_tests.cpp  coverage_bounds_tests.cpp  coverage_observation_tests.cpp  coverage_planner_tests.cpp  coverage_pomdp_tests.cpp  coverage_robot_tests.cpp  coverage_state_tests.cpp  coverage_world_tests.cpp  pomdp_coverage_robot_tests.cpp  random_coverage_robot_tests.cpp
tests/util/: seed_tests.cpp
(+2765 files in other folders)
